# lutris

./: .agignore  .bzrignore  .editorconfig  .flake8  .gitignore  .gitmodules  .isort.cfg  .mypy_baseline  .pylintrc  .quickly  .travis.yml  .yapf  AUTHORS  CONTRIBUTING.md  COPYING  Copyright  GTK4-KNOWN-ISSUES.md  GTK4-MIGRATION.md  HACKING  INSTALL  INSTALL.rst  INSTALL.rst.orig  MANIFEST.in  Makefile  Pipfile  README  README.rst  Untitled  all_services.py  clean.sh  default.nix  driver_test.py  flake.nix  gogwindow.py  issue-list.txt  lutris.desktop  lutris.desktop.in  lutris.spec  meson.build  meson_post_install.py  (+9 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report_form.yml  lutris-bug-report.md
.github/scripts/: build-sign-ubuntu.sh  build-ubuntu-22.04.sh  build-ubuntu-24.04.sh  build-ubuntu-generic.sh  build-ubuntu.sh  install-ubuntu-generic.sh  install-ubuntu.sh
.github/workflows/: lint_python.yml  publish-appimage.yml  publish-lutris-ppa.yml  publish-ppa.yml  pytest.yml  run_testsuite.yml  static.yml
.hooks/: pre-commit
.reuse/: dep5
apport/: source_lutris.py
coverflow/: anim.py  coverflow.py  covergl.py
data/ui/: AboutDialog.ui  AboutLutrisDialog.ui  AddgameDialog.ui  LutrisWindow.ui  LutrisWindow3.ui  PreferencesLutrisDialog.ui  about-dialog.ui  about_lutris_dialog.xml  (+5 more)
debian/: TODO  apparmor-profile  changelog  clean  control  copyright  files  lintian-overrides  lutris.links  postinst  postrm  py3dist-overrides  pyversions  rules
docs/: installers-conventions  installers.rst  moderating-entries.rst  moderating-installers.rst  release-guidelines.rst  steam.rst
etc/: pylintrc
lutris/: AboutLutrisDialog.py  AptDialog.py  PreferencesLutrisDialog.py  __init__.py  add_game_dialog.py  api.py  cache.py  child_wrapper.py  command.py  config.py  config_vbox.py  configure.py  constants.py  controller.py  desktop_control.py  directories.py  discord.py  downloader.py  edit_game_config_dialog.py  exception_backstops.py  exceptions.py  ftp.py  fuseiso.py  game.py  game_actions.py  game_config_vbox.py  game_launcher.py  gconf.py  gconfwrapper.py  google_image.py  google_image_dialog.py  helpers.py  install.py  installer.py  installer_config_vbox.py  installer_dialog.py  lutrisconfig.py  monitored_command.py  mount_iso_dialog.py  pga.py  (+25 more)
nbproject/: project.properties  project.xml
po/: LINGUAS  POTFILES  README.md  ar.po  autogen.sh  be.po  bg.po  cs.po  de.po  el.po  es.po  fa.po  fi.po  fr.po  generate-potfiles.sh  gl.po  gl_ES.po  hr.po  id.po  it.po  ka.po  ko.po  lutris.pot  meson.build  nb.po  nl.po  nl_NL.po  pl.po  pt-br.po  pt_BR.po  pt_PT.po  ru.po  sv.po  tr.po  update-POTFILES.sh  vi.po  zh_CN.po  zh_TW.po
quidgets/: __init__.py
runners/: __init__.py  atari800.py  browser.py  cedega.py  dosbox.py  frotz.py  gens.py  hatari.py  jzintv.py  linux.py  machine.py  mednafen.py  nulldc.py  o2em.py  openmsx.py  osmose.py  pcsx.py  runner.py  scummvm.py  sdlmame.py  snes9x.py  steam.py  stella.py  uae.py  vavoom.py  vice.py  wine.py
schema/: installer.schema.json  installer.schema.yml  sample.json  sample.yml  yaml2json.sh  ymlToJson.sh
share/: applications  icons  meson.build
share/appdata/: lutris.appdata.xml  net.lutris.Lutris.appdata.xml
share/applications/: lutris.desktop  net.lutris.Lutris.desktop  net.lutris.Lutris1.desktop
share/glib-2.0/schemas/: apps.lutris.gschema.xml
share/lutris/applications/: lutris.desktop
share/lutris/conf/: origin-openssl3.cnf
share/lutris/controllers/: gamecontrollerdb.txt
share/lutris/discord/: games-ids.json
share/lutris/gtk/: menus.ui
share/lutris/icons/hicolor/symbolic/apps/: README.rst  copyright.old  symbols.html
share/lutris/json/: 86box.json  ags.json  ares.json  azahar.json  basiliskii.json  citra.json  colem.json  desmume.json  dgen.json  frotz.json  gargoyle.json  melonds.json  mgba.json  microm8.json  minivmac.json  pcem.json  ppsspp.json  rosaliesmupengui.json  ruffle.json  sheepshaver.json  speccy.json  stella.json  supermodel.json  tic80.json  virtualjaguar.json  vita3k.json
share/lutris/lib/: gamecontrollerdb.txt
share/lutris/media/: default_banner.png.license  logo.png.license  mask.png.license  side-light.svg.license  splash-light.svg.license
share/lutris/media/runner_icons/: symbols.html  wineegs.psd
share/lutris/ui/: LutrisWindow.ui  LutrisWindow.ui~  about-dialog.ui  account-menu-popover.ui  copy-button.ui  dialog-client-update.ui  dialog-lutris-login.ui  dialog-pga-sources.ui  dialog-uninstall-game.ui  download-queue.ui  help-overlay.ui  log-window.css  log-window.ui  lutris-window.ui  lutris.css  menus-traditional.ui  menus.ui  runner-entry.ui  runner-remove-all-versions-dialog.ui  runner-remove-confirm-dialog.ui  runners-dialog.ui  script-dialog.ui  script-dialog.ui~  style.css  tosec-window.ui  uninstall-dialog.ui  view-menu-popover.ui
share/lutris/yaml/: eden.yml
share/man/: lutris.1
share/man/man1/: lutris.1
share/metainfo/: net.lutris.Lutris.appdata.xml  net.lutris.Lutris.metainfo.xml
share/polkit-1/actions/: net.lutris.resetxpad.policy  net.lutris.xboxdrv.policy  net.lutris.xboxdrvctl.policy
snap/: snapcraft.yaml
tests/: README  _test_all_sources.py  _test_cache.py  _test_cloud_sync_progress.py  _test_dialogs.py  _test_glxinfo.py  _test_gog_cloud.py  _test_gog_cloud_hooks.py  _test_installer.py  _test_installer_file_cache.py  _test_moddb_helper.py  _test_pga.py  _test_registry.py  _test_steamfamily.py  _test_utils.py  _test_wine.py  benchmark_download.py  bootstrap.py  check_prefixes.py  config_test.py  depends.py  gconftest.py  paths_test.py  pga_test.py  steam_test.py  test_api.py  test_categories_filter.py  test_cli.py  test_cloud_sync_progress.py  test_config.py  test_dialogs.py  test_glxinfo.py  test_gog_cloud.py  test_gog_cloud_hooks.py  test_installer.py  test_lutris_wrapper.py  test_moddb_helper.py  test_pga.py  test_registry.py  test_resources.py  (+8 more)
tool/: re_tool.py  url_tool.py
utils/: bios_format.py  check_annotations.py  clean_configs.py  cleanup_prefix.py  extract_icon.py  issuelocker.py  meson_post_install.py  scan_rom_dir.py
(+521 files in other folders)
