[tool.poetry]
name = "lutris"
version = "0.5.9.1"
description = "Lutris is a video game preservation platform that helps you install and play video games from all eras and from most gaming systems. By leveraging and combining existing emulators, engine re-implementations and compatibility layers, it gives you a central interface to launch all your games."
authors = ["Mathieu Comandon <strider@strycore.com>"]
license = "GPLv3+"

[tool.poetry.dependencies]
python = "^3.6.2"
astroid = '>=2.3'
certifi = '>=2020.4.5.1'
chardet = '>=3.0'
dbus-python = '>=1.2'
entrypoints = '>=0.3'
evdev = '>=1.3'
idna = '>=2.9'
lazy-object-proxy = '>=1.4'
mccabe = '>=0.6'
pycairo = '>=1.19'
pyflakes = '>=2.1'
PyGObject = '>=3.36'
python-magic = '>=0.4.16'
PyYAML = '>=5.3'
requests = '>=2.23'
six = '>=1.14'
urllib3 = '>=1.25'
wrapt = '>=1.11'
keyring = "*"
lxml = '>=4.5.2'
Pillow = "*"
distro = {version = "^1.7.0", platform = "linux"}

[tool.poetry.dev-dependencies]
autopep8 = '>=1.5'
flake8 = '>=3.7'
isort = '>=5.9'
pycodestyle = '>=2.5'
PyGObject-stubs = '*'
pylint = '==2.11.1'
bandit = "*"
black = "*"
mypy = "*"
pytest = "*"
pyupgrade = "*"
safety = "*"
nose2 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
